--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
     <div class="qr">
 <img src="https://i.ibb.co/FbV51MXV/IMG-2750.jpg" alt="">    </div>
     <div class="ticket-info">
-      <div class="number">473915</div>
+      <div class="number">QKJRKKZ7</div>
       <div class="progress-bar"><div class="progress"></div></div>
     </div>
     <hr class="sep">
@@ -373,7 +373,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
         </svg>
         Geburtsdatum
       </div>
-      <div class="value">15.06.2003</div>
+      <div class="value">15.06.2002</div>
     </div>
     <hr class="sep">
     <div class="note">
