--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
       <img src="https://i.ibb.co/jvncfWnS/download-3.png" alt="">
     </div>
     <div class="qr">
-<img src="https://i.ibb.co/FbV51MXV/IMG-2750.jpg" alt="">    </div>
+<img src="https://i.ibb.co/cSYKht24/tikKatya.jpg" alt="">    </div>
     <div class="ticket-info">
-      <div class="number">QKJRKKZ7</div>
+      <div class="number">7426934</div>
       <div class="progress-bar"><div class="progress"></div></div>
     </div>
     <hr class="sep">
