--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
       <img src="https://i.ibb.co/jvncfWnS/download-3.png" alt="">
     </div>
     <div class="qr">
-<img src="https://i.ibb.co/cSYKht24/tikKatya.jpg" alt="">    </div>
+<img src="https://i.postimg.cc/HL90Lw8V/IMG-8841.jpg" alt="">    </div>
     <div class="ticket-info">
       <div class="number">7426934</div>
       <div class="progress-bar"><div class="progress"></div></div>
@@ -344,10 +344,10 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
         </svg>
         Gültig von
       </div>
-      <div class="value">01.01.2026 - 00:00</div>
+      <div class="value">01.03.2026 - 00:00</div>
 
       <div class="label">Gültig bis</div>
-      <div class="value">01.02.2026 - 03:00</div>
+      <div class="value">01.04.2026 - 03:00</div>
 
       <div class="label">Geltungsbereich</div>
       <div class="value">Deutschlandweit</div>
